--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "mongoose": "^6.8.0",
-    "rxjs": "~7.5.0",
+    "ngx-socket-io": "^4.4.0",
+    "peer": "^0.6.1",
+    "peerjs": "^1.4.7",
+    "rxjs": "^7.5.7",
+    "socket.io": "^4.5.4",
     "tslib": "^2.3.0",
     "ws": "^8.11.0",
     "zone.js": "~0.11.4"
